# AUDIT-TEST

./: .audit-test-ignore  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LICENSES.md  README.md  ROADMAP.md  audit_gate.py  audit_phd.py  audit_quality.py  audit_runtime.py  audit_shared.py  audit_suite.py  audit_wiring.py  deps.py  next step good.txt  next steps posibly.txt  next.txt  package-lock.json  pyproject.toml  run_all_audits.py
.github/workflows/: publish.yml
docs/: coding-conventions.md  integrations.md  phd.md  quality.md  runtime.md  skill.md  suite.md  wiring.md
examples/: agent-engine-config.toml  audit-code.toml  github-actions.yml
src/audit_code/: __init__.py  __main__.py  audit_config.py  audit_deps.py  audit_gate.py  audit_phd.py  audit_quality.py  audit_runtime.py  audit_shared.py  audit_suite.py  audit_wiring.py  cli.py  config.py  defgraph.py  deps.py  encoding_check.py  gate.py  graph.py  init.py  models.py  phd.py  polyglot.py  profiler.py  project.py  quality.py  run_all_audits.py  runner.py  runtime.py  suite.py  surgeon.py  wiring.py
src/audit_code/adapters/: __init__.py  base.py
src/audit_code/adapters/cpp/: __init__.py  adapter.py  phd.py
src/audit_code/adapters/csharp/: __init__.py  adapter.py  phd.py
src/audit_code/adapters/dart/: adapter.py
src/audit_code/adapters/elixir/: adapter.py
src/audit_code/adapters/go/: __init__.py  adapter.py  phd.py
src/audit_code/adapters/haskell/: adapter.py
src/audit_code/adapters/html/: __init__.py  adapter.py
src/audit_code/adapters/java/: __init__.py  adapter.py  phd.py
src/audit_code/adapters/javascript/: __init__.py  adapter.py  ast_rules.py
src/audit_code/adapters/kotlin/: adapter.py  phd.py
src/audit_code/adapters/lua/: adapter.py
src/audit_code/adapters/php/: adapter.py  phd.py
src/audit_code/adapters/python/: __init__.py  adapter.py
src/audit_code/adapters/ruby/: adapter.py
src/audit_code/adapters/rust/: adapter.py  (+2 more)
src/audit_code/integrations/: __init__.py  _tool_runner.py  bandit.py  checkstyle.py  clang_tidy.py  clippy.py  codeql.py  cppcheck.py  credo.py  dart_analyze.py  dependency_scan.py  detekt.py  dotnet_format.py  eslint.py  go_vet.py  golangci_lint.py  hlint.py  htmlhint.py  luacheck.py  megalinter.py  phpstan.py  pmd.py  prettier.py  rubocop.py  rustfmt.py  scalafix.py  secret_scan.py  semgrep.py  stylelint.py  swiftlint.py  zig_fmt.py
src/audit_code/profiles/: __init__.py
src/audit_code/reporting/: __init__.py  json_report.py  junit.py  sarif.py
tests/: test_adapters.py  test_audit_misc.py  test_audit_phd.py  test_audit_quality.py  test_audit_runtime.py  test_audit_wiring.py  test_base.py  test_cli.py  test_cli_combinatorics.py  test_cli_focus_ignore.py  test_config.py  test_coverage.py  test_coverage_helpers.py  test_defgraph.py  test_encoding_check.py  test_focus.py  test_gate.py  test_graph.py  test_graph_new.py  test_integrations.py  test_jsx_fallback.py  test_phd_new_rules.py  test_polyglot.py  test_profiler.py  test_quality_helpers.py  test_reporting.py  test_runner.py  test_smoke.py  test_surgeon.py  test_utf8_output.py  test_worker_internals.py  test_wrappers.py
(+12 files in other folders)
