[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "audit-code"
version = "0.1.0"
description = "Code and test verification orchestrator — interrogates code quality AND whether tests genuinely prove correctness"
requires-python = ">=3.10"
license = {text = "MIT"}
readme = "README.md"

[project.scripts]
audit-code = "audit_code.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
